# mcp-automations

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WRITEUP.md  fly.toml  pyproject.toml  requirements.txt  server.json
.github/workflows/: ci.yml
.streamlit/: secrets.toml.example
mcp_server/: exceptions.py  models.py  server.py
playground/: app.py
tests/: test_helpers.py  test_smoke.py  test_tools.py
