[project]
name = "mcp-automations"
version = "0.1.0"
description = "Production-grade MCP server exposing useful tools (summarize, repurpose, digest, find competitors) to LLM agents. Built with FastMCP, deployable to Fly.io, with a Streamlit playground."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [".venv", "assets"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line too long
    "B008",  # function calls in argument defaults
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_decorators = false
files = ["mcp_server", "playground", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
